desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
/* ... */
treeview header button:checked,
treeview header button:checked:hover,
treeview header button:checked:hover:focus {
    background-color: @entry_bg_color;
    background-image: none;
}

treeview header button,
treeview header button:focus,
treeview header button:checked,
treeview header button:checked:hover,
treeview header button:focus:checked,
treeview header button:focus:hover:active {
    border-image: none;
    border-width: 1px;
    border-radius: 0;
    border-style: solid;
    border-color: @column_header_border_top_color @column_header_border_right_color
                  @column_header_border_bottom_color @column_header_border_left_color;

}

treeview header button:last-child,
treeview header button:last-child:focus,
treeview header button:last-child:checked,
treeview header button:last-child:hover:active,
treeview header button:last-child:active:focus {
    border-right: none;
}

row,
row:focus {
   min-height: 22px;
}

row:hover,
row:disabled,
row:selected,
row:selected:focus {
    border-width: 0;
}

row:selected,
row:selected:focus,
.cell:selected,
row:selected:hover,
row:selected:focus:hover,
.cell:selected:hover {
    background-image: -gtk-gradient (linear,
                      left top,
                      left bottom,
                      from (@menubar_menuitem_hover_gradient_a),
                      to (@menubar_menuitem_hover_gradient_d));
}

row:hover,
row:hover:focus,
.cell:hover {
    background-image: -gtk-gradient (linear,
                      left top,
                      left bottom,
                      from (shade(@menubar_menuitem_hover_gradient_a, 1.2)),
                      to (shade(@menubar_menuitem_hover_gradient_d, 1.3)));
}

.cell {
    color: @theme_text_color;
    padding: 2px;
    border-width: 0;
}

.cell:selected {
    color: @theme_selected_fg_color;
}

/* expander */
expander {
    border-style: solid;
    border-width: 1px;
    border-radius: 2px;
    border-color: @border_color;
    color: @theme_fg_color;
    background-color: shade(@theme_bg_color, 1.02);
}

treeview.view.expander {
    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
    color: @theme_fg_color;
}

treeview.view.expander:dir(rtl) {
     -gtk-icon-source: -gtk-icontheme("pan-end-symbolic-rtl");
}

treeview.view.expander:checked {
    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
 }

treeview.view.expander:hover {
    color: @theme_selected_bg_color;
}

treeview.view.expander:selected,
treeview.view.expander:selected:hover {
    color: @theme_selected_fg_color;
}

expander arrow {
    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
}

expander arrow:dir(rtl) {
    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic-rtl");
}

expander arrow:hover {
    color: @internal_element_color;
}

expander arrow:checked {
    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
}

/* why this weird padding, possible issue with gtk+-3.18 ? */
expander arrow {
    min-width: 16px;
    min-height: 16px;
    padding: 0px 4px 0px 0px;
}

expander row {
    border-radius: 2px;
}

expander row:selected,
expander row:selected:focus {
    border-style: solid;
    border-width: 1px;
    border-color: @expander_row_selected_border_color;
    color: @expander_row_selected_color;
    background-color: @theme_selected_bg_color;
}

expander scrolledwindow.frame {
    border-radius: 0px;
    border-width: 1px 0px;
}

expander toolbar.inline-toolbar {
    border-width: 0px;
    border-style: none;
}

/* Calendars */
calendar {
    padding: 1px;
    border-style:none;
}

calendar.view {
    border-radius: 3px;
    border-style: solid;
    border-width: 1px;
    border-color: rgb(162,158,155);
    padding: 0px;
}

calendar.header {
    border-radius: 3px 3px 0px 0px;
    background-image: -gtk-gradient (linear,
                      left top,
                      left bottom,
                      from (shade (@theme_bg_color, 1.04)),
                      to (shade (@theme_bg_color, 0.89)));
    border-width: 0;
}

calendar button,
calendar button:disabled {
    background-image: none;
    background-color: transparent;
}

calendar {
    color: @theme_fg_color;
    text-shadow: none;
}

calendar:indeterminate {
    color: alpha(@theme_fg_color, 0.4);
}

calendar.highlight {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
    border-radius: 0;
    padding: 0;
    border-width: 0;
}

/* Use different button and entry borders on infobars */
infobar entry,
infobar entry:focus,
infobar button,
infobar button:disabled,
infobar button:checked,
infobar button:focus,
infobar button:focus:checked,
entry.info,
entry.info:focus,
.info button,
.info button:disabled,
.info button:checked,
.info button:focus,
.info button:focus:checked,
entry.warning,
entry.warning:focus,
.warning button,
.warning button:disabled,
.warning button:checked,
.warning button:focus,
.warning button:focus:checked,
entry.question,
entry.question:focus,
.question button,
.question button:disabled,
.question button:checked,
.question button:focus,
.question button:focus:checked,
entry.error,
entry.error:focus,
.error button,
.error button:disabled,
.error button:checked,
.error button:focus,
.error button:focus:checked {
    border-image: none;
    border-color: shade(@border_color, 0.9);
    border-style: solid;
    border-width: 1px;
}

infobar,
.info,
.warning,
.question,
.error {
    border-width: 1px;
    border-style: solid;
}

infobar {
    border-color: shade(@border_color, 0.9);
}

.info,
.info > * {
    background-color: @info_bg_color;
    color: @info_fg_color;
    border-color: darker(@info_bg_color);
}

.warning,
.warning > * {
    background-color: @warning_bg_color;
    color: @warning_fg_color;
    border-color: darker(@warning_bg_color);
}

.question,
.question > * {
    background-color: @question_bg_color;
    color: @question_fg_color;
    border-color: darker(@question_bg_color);
}
/* ... */

